# agentguard-firewall-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/agentguard/: __init__.py  policy.py  violations.py
tests/: test_policy.py
