[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "agentguard-firewall"
version = "0.1.0"
description = "Network egress firewall for AI agents. Declarative allow/deny list of hosts your agent tools may reach. Python port of @mukundakatta/agentguard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "ai",
  "agents",
  "security",
  "firewall",
  "egress",
  "policy",
  "allowlist",
  "tool-use",
  "llm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agentguard-py"
Issues = "https://github.com/MukundaKatta/agentguard-py/issues"
Source = "https://github.com/MukundaKatta/agentguard-py"
"JS sibling" = "https://github.com/MukundaKatta/agentguard"

[tool.hatch.build.targets.wheel]
packages = ["src/agentguard"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
